@@ -1,3 +1,7 @@
+2021-09-15 Danilo Chang
+
+	* Implement command: rotate
+
 2021-09-14 Danilo Chang
 
 	* Apply Christian's patch for v0.8
